auto publishing updates to notebooks

--- a/aiyagari_jax.ipynb
+++ b/aiyagari_jax.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "287547ba",
+   "id": "dcd714fe",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0449c63",
+   "id": "aa7150eb",
    "metadata": {},
    "source": [
     "# The Aiyagari Model"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcbc29a5",
+   "id": "6640b965",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28adec22",
+   "id": "e12a0989",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc75805a",
+   "id": "7b9c2c6e",
    "metadata": {},
    "source": [
     "### References\n",
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdd47cac",
+   "id": "e10a19c0",
    "metadata": {},
    "source": [
     "### Preliminaries\n",
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da06d21f",
+   "id": "23dec9b8",
    "metadata": {
     "hide-output": false
    },
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "100f4203",
+   "id": "e3b61d15",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e61ab57",
+   "id": "44bb6446",
    "metadata": {
     "hide-output": false
    },
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10a707bf",
+   "id": "52b03808",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed3295ee",
+   "id": "56981c1b",
    "metadata": {
     "hide-output": false
    },
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8b3a70e",
+   "id": "e2c210ee",
    "metadata": {},
    "source": [
     "We will use the following function to compute stationary distributions of stochastic matrices.  (For a reference to the algorithm, see p. 88 of [Economic Dynamics](https://johnstachurski.net/edtc).)"
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65dce797",
+   "id": "48af57d0",
    "metadata": {
     "hide-output": false
    },
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d2cec9b",
+   "id": "ff56052e",
    "metadata": {},
    "source": [
     "## Firms\n",
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "444a4b23",
+   "id": "9afa5ad7",
    "metadata": {
     "hide-output": false
    },
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5b42323",
+   "id": "62a46f86",
    "metadata": {},
    "source": [
     "From the first-order condition with respect to capital, the firm’s inverse demand for capital is\n",
@@ -244,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8d6a3ec",
+   "id": "8d15b098",
    "metadata": {
     "hide-output": false
    },
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ce80594",
+   "id": "61aad96f",
    "metadata": {},
    "source": [
     "Using [(18.1)](#equation-equation-aiy-rgk) and the firm’s first-order condition for labor,\n",
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "947e3579",
+   "id": "4c2f9ede",
    "metadata": {
     "hide-output": false
    },
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "647db3e8",
+   "id": "c2a2ce0f",
    "metadata": {},
    "source": [
     "## Households\n",
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f16c6073",
+   "id": "79faa9c3",
    "metadata": {},
    "source": [
     "### Primitives and Operators\n",
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30dfcedb",
+   "id": "49ed7be9",
    "metadata": {
     "hide-output": false
    },
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6302e941",
+   "id": "ab7430ef",
    "metadata": {
     "hide-output": false
    },
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ea9a2ba",
+   "id": "17c8e831",
    "metadata": {},
    "source": [
     "For now we assume that $ u(c) = \\log(c) $.\n",
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2277b732",
+   "id": "953e98b9",
    "metadata": {
     "hide-output": false
    },
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "341576e6",
+   "id": "39b7a4ad",
    "metadata": {},
    "source": [
     "Here’s a tuple that stores the wage rate and interest rate, as well as a function that creates a price namedtuple with default values."
@@ -418,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8ebb657",
+   "id": "b1412581",
    "metadata": {
     "hide-output": false
    },
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9df5d97d",
+   "id": "3659addb",
    "metadata": {},
    "source": [
     "Now we set up a vectorized version of the right-hand side of the Bellman equation\n",
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f18dd7c",
+   "id": "760b4111",
    "metadata": {
     "hide-output": false
    },
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "395d2b3c",
+   "id": "07bf09ac",
    "metadata": {},
    "source": [
     "The next function computes greedy policies."
@@ -488,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83fcfeae",
+   "id": "31f805bb",
    "metadata": {
     "hide-output": false
    },
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5766e927",
+   "id": "c0a14a87",
    "metadata": {},
    "source": [
     "The following function computes the array $ r_{\\sigma} $ which gives current\n",
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "069000c6",
+   "id": "1a1d379c",
    "metadata": {
     "hide-output": false
    },
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ff27cf5",
+   "id": "1568a125",
    "metadata": {},
    "source": [
     "The value $ v_{\\sigma} $ of a policy $ \\sigma $ is defined as\n",
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75469ca3",
+   "id": "4e5e21f2",
    "metadata": {
     "hide-output": false
    },
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6941d1f",
+   "id": "70db2c78",
    "metadata": {},
    "source": [
     "The next function computes the lifetime value of a given policy."
@@ -610,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1b9b45c",
+   "id": "38400830",
    "metadata": {
     "hide-output": false
    },
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39a66024",
+   "id": "ba211430",
    "metadata": {},
    "source": [
     "Here’s the Howard policy iteration."
@@ -642,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8dfab0c5",
+   "id": "6e673808",
    "metadata": {
     "hide-output": false
    },
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce6c8e45",
+   "id": "21b17ee2",
    "metadata": {},
    "source": [
     "As a first example of what we can do, let’s compute and plot an optimal accumulation policy at fixed prices."
@@ -684,7 +684,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6af86ee1",
+   "id": "fca345ba",
    "metadata": {
     "hide-output": false
    },
@@ -698,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3187f2c4",
+   "id": "327606ee",
    "metadata": {
     "hide-output": false
    },
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "584ec8ce",
+   "id": "8bf1b3c0",
    "metadata": {
     "hide-output": false
    },
@@ -722,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c0d45e8",
+   "id": "8f8ac12a",
    "metadata": {
     "hide-output": false
    },
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df7c9fc6",
+   "id": "656b0fdb",
    "metadata": {},
    "source": [
     "The next plot shows asset accumulation policies at different values of the exogenous state."
@@ -742,7 +742,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b34a2aa8",
+   "id": "4babe57b",
    "metadata": {
     "hide-output": false
    },
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3404452",
+   "id": "467009f8",
    "metadata": {},
    "source": [
     "### Capital Supply\n",
@@ -783,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9734f17",
+   "id": "17b49d52",
    "metadata": {
     "hide-output": false
    },
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26a4e515",
+   "id": "da4fb93a",
    "metadata": {},
    "source": [
     "Let’s give this a test run."
@@ -827,7 +827,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e696fe7",
+   "id": "f6e6ce2f",
    "metadata": {
     "hide-output": false
    },
@@ -839,7 +839,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64a4e389",
+   "id": "65518f52",
    "metadata": {
     "hide-output": false
    },
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7ac038e",
+   "id": "d8fb091b",
    "metadata": {},
    "source": [
     "The distribution should sum to one:"
@@ -863,7 +863,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c632536",
+   "id": "96198b08",
    "metadata": {
     "hide-output": false
    },
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a381e8e0",
+   "id": "2c63eead",
    "metadata": {},
    "source": [
     "The next function computes aggregate capital supply by households under policy $ \\sigma $, given wages and interest rates."
@@ -883,7 +883,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e26f3d3",
+   "id": "6b30177d",
    "metadata": {
     "hide-output": false
    },
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a7005c4",
+   "id": "fce46b12",
    "metadata": {},
    "source": [
     "## Equilibrium\n",
@@ -931,7 +931,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78611a93",
+   "id": "55854a99",
    "metadata": {
     "hide-output": false
    },
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7884acc4",
+   "id": "342cc073",
    "metadata": {},
    "source": [
     "### Visual inspection\n",
@@ -961,7 +961,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a2f81c6",
+   "id": "396bf66e",
    "metadata": {
     "hide-output": false
    },
@@ -977,7 +977,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e518c0a",
+   "id": "9381cc32",
    "metadata": {
     "hide-output": false
    },
@@ -993,7 +993,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63e8a207",
+   "id": "73390c8b",
    "metadata": {},
    "source": [
     "### Computing the equilibrium\n",
@@ -1012,7 +1012,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5eeffbda",
+   "id": "0325b647",
    "metadata": {
     "hide-output": false
    },
@@ -1037,7 +1037,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9572951",
+   "id": "6c8127b6",
    "metadata": {
     "hide-output": false
    },
@@ -1054,7 +1054,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e640c7f",
+   "id": "b356e9ea",
    "metadata": {},
    "source": [
     "This is not very fast, given how quickly we can solve the household problem.\n",
@@ -1066,7 +1066,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8f69795",
+   "id": "561449cc",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf2e43e6",
+   "id": "12e2a041",
    "metadata": {},
    "source": [
     "## Exercise 18.1\n",
@@ -1091,7 +1091,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de0ed8dd",
+   "id": "478db8eb",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 18.1](https://jax.quantecon.org/#aiyagari-ex1)"
@@ -1100,7 +1100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d74ad19e",
+   "id": "db94cde0",
    "metadata": {
     "hide-output": false
    },
@@ -1111,7 +1111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc0a87d0",
+   "id": "cf53de5d",
    "metadata": {},
    "source": [
     "We use bisection to find the zero of the function $ h(k) = k - G(k) $."
@@ -1120,7 +1120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7bd7783d",
+   "id": "f625acea",
    "metadata": {
     "hide-output": false
    },
@@ -1134,7 +1134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69bbb364",
+   "id": "44b4ed23",
    "metadata": {
     "hide-output": false
    },
@@ -1151,7 +1151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb814a0c",
+   "id": "06815fd1",
    "metadata": {},
    "source": [
     "Bisection seems to be faster than the damped iteration scheme."
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1677c6d",
+   "id": "391cb3e7",
    "metadata": {},
    "source": [
     "## Exercise 18.2\n",
@@ -1172,7 +1172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "059d8779",
+   "id": "6963ab24",
    "metadata": {
     "hide-output": false
    },
@@ -1183,7 +1183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2d8b1be",
+   "id": "7fafdd73",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 18.2](https://jax.quantecon.org/#aiyagari-ex2)"
@@ -1192,7 +1192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83368bed",
+   "id": "273e8dac",
    "metadata": {
     "hide-output": false
    },
@@ -1211,7 +1211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b712d6e",
+   "id": "1a609c6e",
    "metadata": {
     "hide-output": false
    },
@@ -1226,7 +1226,7 @@
   }
  ],
  "metadata": {
-  "date": 1764310726.970857,
+  "date": 1764311390.6303995,
   "filename": "aiyagari_jax.md",
   "kernelspec": {
    "display_name": "Python",
