--- a/hopenhayn.ipynb
+++ b/hopenhayn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d7718679",
+   "id": "676b6b6a",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b04bb620",
+   "id": "dd2017dd",
    "metadata": {},
    "source": [
     "# The Hopenhayn Entry-Exit Model"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6aed7fe7",
+   "id": "c39668e3",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e86ce29f",
+   "id": "c0eb9ea7",
    "metadata": {},
    "source": [
     "## Outline\n",
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "740ffd07",
+   "id": "32f85dd6",
    "metadata": {
     "hide-output": false
    },
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69f33e1d",
+   "id": "a53c63b2",
    "metadata": {},
    "source": [
     "We will use the following imports."
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6b5e272",
+   "id": "5195e251",
    "metadata": {
     "hide-output": false
    },
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61f8800b",
+   "id": "b55d7478",
    "metadata": {},
    "source": [
     "## The Model"
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdcd2e8a",
+   "id": "288f25fd",
    "metadata": {},
    "source": [
     "### Environment\n",
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1667dcdb",
+   "id": "0d562384",
    "metadata": {},
    "source": [
     "### Firm decisions\n",
@@ -186,7 +186,7 @@
     "The firm makes their stop-continue choice by first solving for the value function, which is the unique solution in a class of continuous functions $ \\mathscr C $ (details omitted) to\n",
     "\n",
     "\n",
-    "<a id='equation-b0c9d20c-70da-485a-855a-8b69489f83f0'></a>\n",
+    "<a id='equation-d1693e4a-2b1b-4dec-9d34-d86b7e1854ab'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    v(\\varphi, p) = \\pi(\\varphi, p) + \\beta \n",
@@ -199,7 +199,7 @@
     "Given $ \\bar v $, we let $ \\bar \\varphi $ be the exit threshold function defined by\n",
     "\n",
     "\n",
-    "<a id='equation-ff35da81-2a7c-47de-8e14-d4aa6307203b'></a>\n",
+    "<a id='equation-7dd46e2a-07de-4cca-9e6a-174795f87d45'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\bar \\varphi(p) := \n",
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7386f7f9",
+   "id": "5c7500eb",
    "metadata": {},
    "source": [
     "### Equilibrium\n",
@@ -253,7 +253,7 @@
     "distribution of firms over productivity levels, such that the goods market clears, or\n",
     "\n",
     "\n",
-    "<a id='equation-ca924d41-e202-4f62-9ebf-e901bfbead3e'></a>\n",
+    "<a id='equation-2023388f-db57-44bf-b3d7-766f62ad37f9'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\int q( \\varphi, p) \\mu(d \\varphi) = D(p),\n",
@@ -263,7 +263,7 @@
     "the *invariance condition* over the firm distribution\n",
     "\n",
     "\n",
-    "<a id='equation-f5707a02-248b-413b-ad6b-3e88029bc76e'></a>\n",
+    "<a id='equation-923381bd-3c7e-471b-ac0a-5162f1db52ad'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\mu (B) \n",
@@ -277,7 +277,7 @@
     "holds (see below for intuition), the *equilibrium entry condition*\n",
     "\n",
     "\n",
-    "<a id='equation-e5438236-e83c-4c0e-bdcc-4804362ca9bd'></a>\n",
+    "<a id='equation-b681ecb2-2b78-486d-a06d-5bdd90964e1a'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\int \\bar v( \\varphi, p) \\, \\gamma(d \\varphi) = c_e\n",
@@ -287,7 +287,7 @@
     "holds, and the *balanced entry and exit condition*\n",
     "\n",
     "\n",
-    "<a id='equation-76f2a3ec-277d-4f39-8aa1-e8daf700b8d8'></a>\n",
+    "<a id='equation-080c2383-456f-4b42-83b1-8bc715fe2db7'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    M = \\mu \\{ \\varphi < \\bar \\varphi(p) \\}\n",
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9d64a10",
+   "id": "63d2c0bf",
    "metadata": {},
    "source": [
     "### Computing equilibrium\n",
@@ -312,7 +312,7 @@
     "exit into the time invariance condition, yielding\n",
     "\n",
     "\n",
-    "<a id='equation-de3c332e-3853-4afb-b444-2dfe44503e48'></a>\n",
+    "<a id='equation-6567e934-de0d-4efe-8fe6-852d55506c81'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\mu (B) \n",
@@ -324,7 +324,7 @@
     "where $ \\Pi $ is the transition kernel on $ \\mathbb R_+ $ defined by\n",
     "\n",
     "\n",
-    "<a id='equation-9251d4e9-df9a-4e10-99fe-5d9d55901296'></a>\n",
+    "<a id='equation-9f2376dd-6cfc-411c-af1a-8e31b7e859f9'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\Pi(\\varphi, B) \n",
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0590e376",
+   "id": "d4355be9",
    "metadata": {},
    "source": [
     "### Specification of dynamics\n",
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41aa9891",
+   "id": "e8d64ebe",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6f4383a",
+   "id": "d3fbb546",
    "metadata": {
     "hide-output": false
    },
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e239af7",
+   "id": "6d91c001",
    "metadata": {},
    "source": [
     "We store the parameters, grids and Monte Carlo draws in a `namedtuple`."
@@ -417,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d697ce5e",
+   "id": "094db0bb",
    "metadata": {
     "hide-output": false
    },
@@ -438,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e832673f",
+   "id": "18a8bf8c",
    "metadata": {
     "hide-output": false
    },
@@ -453,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12e65ebb",
+   "id": "ab492a53",
    "metadata": {
     "hide-output": false
    },
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca3d58de",
+   "id": "e65693cc",
    "metadata": {
     "hide-output": false
    },
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab58e8e2",
+   "id": "5c82ceb7",
    "metadata": {},
    "source": [
     "Let us write down functions for profits and output."
@@ -518,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e18b439b",
+   "id": "c008e4e2",
    "metadata": {
     "hide-output": false
    },
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c60ac17",
+   "id": "14d071ea",
    "metadata": {
     "hide-output": false
    },
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dec67ec6",
+   "id": "adb66b4b",
    "metadata": {},
    "source": [
     "Let’s write code to simulate a cross-section of firms given a particular value for the exit threshold (rather than an exit threshold function).\n",
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "edf5b134",
+   "id": "c992e68f",
    "metadata": {
     "hide-output": false
    },
@@ -585,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "affeda4f",
+   "id": "c9ebd887",
    "metadata": {
     "hide-output": false
    },
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6d49ef8",
+   "id": "5994abb0",
    "metadata": {},
    "source": [
     "Our next function runs the cross-section forward in time `sim_length` periods."
@@ -605,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4a7d6bc",
+   "id": "5c33dafe",
    "metadata": {
     "hide-output": false
    },
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf75c057",
+   "id": "68f1741b",
    "metadata": {},
    "source": [
     "Here’s a utility function to compute the expected value\n",
@@ -644,7 +644,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56446e60",
+   "id": "3d31aebf",
    "metadata": {
     "hide-output": false
    },
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ddf130e",
+   "id": "9fa8e366",
    "metadata": {},
    "source": [
     "Now let’s vectorize this function in $ \\varphi $ and then write another function that computes the expected value across all $ \\varphi $ in `φ_grid`"
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "582829d6",
+   "id": "6904d22f",
    "metadata": {
     "hide-output": false
    },
@@ -691,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffa48eb8",
+   "id": "c1925976",
    "metadata": {
     "hide-output": false
    },
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a6178b4",
+   "id": "eda4f609",
    "metadata": {},
    "source": [
     "Here is the Bellman operator $ T $."
@@ -721,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0bf6358",
+   "id": "cd7c99ee",
    "metadata": {
     "hide-output": false
    },
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ebb30a8",
+   "id": "19d1fa71",
    "metadata": {},
    "source": [
     "The next function takes $ v, p $ as inputs and, conditional on the value function\n",
@@ -750,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9de6ea00",
+   "id": "bb4cee52",
    "metadata": {
     "hide-output": false
    },
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07696f99",
+   "id": "cde713ed",
    "metadata": {},
    "source": [
     "We use value function iteration (VFI) to compute the value function $ \\bar v(\\cdot, p) $, taking $ p $ as given.\n",
@@ -780,7 +780,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b54bfcd6",
+   "id": "60ebac92",
    "metadata": {
     "hide-output": false
    },
@@ -815,7 +815,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef6f6404",
+   "id": "3849eef1",
    "metadata": {
     "hide-output": false
    },
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd2d75ce",
+   "id": "c7083ee5",
    "metadata": {},
    "source": [
     "We need to solve for the equilibrium price, which is the $ p $ satisfying\n",
@@ -861,7 +861,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdbc8561",
+   "id": "47b96b2b",
    "metadata": {
     "hide-output": false
    },
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bf81c7c",
+   "id": "cf7a8565",
    "metadata": {},
    "source": [
     "We are now ready to compute all elements of the stationary recursive equilibrium."
@@ -904,7 +904,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b5a0032",
+   "id": "0ffdc0fb",
    "metadata": {
     "hide-output": false
    },
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f549a549",
+   "id": "d127b873",
    "metadata": {},
    "source": [
     "## Solving the model"
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5fdbab5",
+   "id": "d113c739",
    "metadata": {},
    "source": [
     "### Preliminary calculations\n",
@@ -960,7 +960,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eaf3f38e",
+   "id": "3eb3f165",
    "metadata": {
     "hide-output": false
    },
@@ -972,7 +972,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b346f08",
+   "id": "72cb650f",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to compute the value function at a given price\n",
@@ -982,7 +982,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85e4f3ee",
+   "id": "6a11f5ec",
    "metadata": {
     "hide-output": false
    },
@@ -995,7 +995,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57746cd3",
+   "id": "0b34cbd2",
    "metadata": {},
    "source": [
     "Let’s run the code again to eliminate compile time."
@@ -1004,7 +1004,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8bb283c",
+   "id": "ebc41bb4",
    "metadata": {
     "hide-output": false
    },
@@ -1015,7 +1015,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "baceabb1",
+   "id": "a5da4b02",
    "metadata": {},
    "source": [
     "Let’s have a look at the net entry value as a function of price\n",
@@ -1026,7 +1026,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1bfb3f1",
+   "id": "678617c7",
    "metadata": {
     "hide-output": false
    },
@@ -1050,7 +1050,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13a2c602",
+   "id": "58a2bb75",
    "metadata": {},
    "source": [
     "Below we solve for the zero of this function to calculate $ p* $.\n",
@@ -1060,7 +1060,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbebbb04",
+   "id": "1c1604f2",
    "metadata": {},
    "source": [
     "### Computing the equilibrium\n",
@@ -1071,7 +1071,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f46c9802",
+   "id": "a2d60f84",
    "metadata": {
     "hide-output": false
    },
@@ -1084,7 +1084,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1abc8ef8",
+   "id": "6ebdce57",
    "metadata": {},
    "source": [
     "Let’s run the code again to get rid of compile time."
@@ -1093,7 +1093,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41495797",
+   "id": "39d89f8e",
    "metadata": {
     "hide-output": false
    },
@@ -1106,7 +1106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34f75f9b",
+   "id": "65ffc3e7",
    "metadata": {},
    "source": [
     "Let’s check that $ p^* $ is close to 1.5"
@@ -1115,7 +1115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b83f58bb",
+   "id": "c0440e8e",
    "metadata": {
     "hide-output": false
    },
@@ -1126,7 +1126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac55f6d9",
+   "id": "4223ea1a",
    "metadata": {},
    "source": [
     "Here is a plot of the value function $ \\bar v(\\cdot, p^*) $."
@@ -1135,7 +1135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebc212c7",
+   "id": "d7c156b7",
    "metadata": {
     "hide-output": false
    },
@@ -1151,7 +1151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1baf7b19",
+   "id": "4b5c6e9b",
    "metadata": {},
    "source": [
     "Let’s have a look at the firm size distribution, with firm size measured by output."
@@ -1160,7 +1160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61bb6893",
+   "id": "8b6ddac8",
    "metadata": {
     "hide-output": false
    },
@@ -1172,7 +1172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "337844df",
+   "id": "04843036",
    "metadata": {
     "hide-output": false
    },
@@ -1189,7 +1189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c037da91",
+   "id": "eeedd0b1",
    "metadata": {},
    "source": [
     "## Pareto tails\n",
@@ -1240,7 +1240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d6a1bb2",
+   "id": "072680e8",
    "metadata": {
     "hide-output": false
    },
@@ -1257,7 +1257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "420fa626",
+   "id": "22352888",
    "metadata": {},
    "source": [
     "Let’s plot the empirical counter CDF of the output distribution."
@@ -1266,7 +1266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "965bdbf6",
+   "id": "e7118ca1",
    "metadata": {
     "hide-output": false
    },
@@ -1287,7 +1287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8793bf8e",
+   "id": "9d18761b",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -1295,7 +1295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10744fac",
+   "id": "36e2cfc4",
    "metadata": {},
    "source": [
     "## Exercise 19.1\n",
@@ -1310,7 +1310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "519fc857",
+   "id": "35d0983b",
    "metadata": {
     "hide-output": false
    },
@@ -1327,7 +1327,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "981abd4d",
+   "id": "79adfaaa",
    "metadata": {},
    "source": [
     "This plot is not linear — as expected, since we are using a folded normal distribution."
@@ -1335,7 +1335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61ee8d8c",
+   "id": "211ccaee",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 19.1](https://jax.quantecon.org/#hopen_ex1)"
@@ -1344,7 +1344,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "429f2a92",
+   "id": "2a5554fd",
    "metadata": {
     "hide-output": false
    },
@@ -1360,7 +1360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d791865",
+   "id": "ac394153",
    "metadata": {},
    "source": [
     "This looks very linear — the model generates Pareto tails.\n",
@@ -1370,7 +1370,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4eaf8df0",
+   "id": "9d5d6160",
    "metadata": {},
    "source": [
     "## Exercise 19.2\n",
@@ -1385,7 +1385,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88284325",
+   "id": "29e091a4",
    "metadata": {
     "hide-output": false
    },
@@ -1396,7 +1396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf0a67f4",
+   "id": "24ba5079",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 19.2](https://jax.quantecon.org/#hopen_ex2)"
@@ -1405,7 +1405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2995f0fc",
+   "id": "25295a31",
    "metadata": {
     "hide-output": false
    },
@@ -1429,7 +1429,7 @@
   }
  ],
  "metadata": {
-  "date": 1764310727.187268,
+  "date": 1764311390.8331838,
   "filename": "hopenhayn.md",
   "kernelspec": {
    "display_name": "Python",
