--- a/jax_nn.ipynb
+++ b/jax_nn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e5c4f2cf",
+   "id": "44e31c1d",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d5ad0c3",
+   "id": "3bd66b18",
    "metadata": {},
    "source": [
     "# Neural Network Regression with JAX"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df9d4189",
+   "id": "65b7b3d4",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e95d34eb",
+   "id": "1ddffc4b",
    "metadata": {},
    "source": [
     "## Outline\n",
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d738cfa",
+   "id": "e2c08812",
    "metadata": {
     "hide-output": false
    },
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "979d23ef",
+   "id": "252c84c1",
    "metadata": {
     "hide-output": false
    },
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fba7acdd",
+   "id": "9813d06f",
    "metadata": {
     "hide-output": false
    },
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "802032cd",
+   "id": "bf710572",
    "metadata": {},
    "source": [
     ">**Note**\n",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "966f8458",
+   "id": "f00c23a3",
    "metadata": {
     "hide-output": false
    },
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a05a32e6",
+   "id": "ff203deb",
    "metadata": {},
    "source": [
     "## Set Up\n",
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "275dea2d",
+   "id": "ec2ca76d",
    "metadata": {},
    "source": [
     "### Flow\n",
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54a74606",
+   "id": "f15e3803",
    "metadata": {
     "hide-output": false
    },
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bebeaca",
+   "id": "6c117e45",
    "metadata": {},
    "source": [
     "### Data\n",
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3d4dc7d",
+   "id": "bf35d4fd",
    "metadata": {
     "hide-output": false
    },
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1733fa20",
+   "id": "b548f60e",
    "metadata": {},
    "source": [
     "Here’s a plot of the data."
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "160c9097",
+   "id": "41cc3956",
    "metadata": {
     "hide-output": false
    },
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fe5dd58",
+   "id": "40a633af",
    "metadata": {},
    "source": [
     "## Training with Keras\n",
@@ -266,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8bf607a",
+   "id": "37084ab4",
    "metadata": {
     "hide-output": false
    },
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93a96499",
+   "id": "a302027c",
    "metadata": {},
    "source": [
     "Notice that we’ve set the optimizer to use stochastic gradient descent and a\n",
@@ -306,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f29f9a84",
+   "id": "0da725a6",
    "metadata": {
     "hide-output": false
    },
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd92afa8",
+   "id": "d1804c4d",
    "metadata": {},
    "source": [
     "The next function extracts and visualizes a prediction from the trained model."
@@ -346,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "039da6e3",
+   "id": "cbe58dd4",
    "metadata": {
     "hide-output": false
    },
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a55f4168",
+   "id": "3704cbd8",
    "metadata": {},
    "source": [
     "Let’s run the Keras training:"
@@ -373,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec8f7be2",
+   "id": "fea16f89",
    "metadata": {
     "hide-output": false
    },
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6645a1a",
+   "id": "8b84192e",
    "metadata": {},
    "source": [
     "The fit is good and we note the relatively low final MSE."
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcb25138",
+   "id": "d2a92a8f",
    "metadata": {},
    "source": [
     "## Training with JAX\n",
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca0f303f",
+   "id": "da3ea966",
    "metadata": {},
    "source": [
     "### Background and set up\n",
@@ -457,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce37bfe5",
+   "id": "2d2c0ac2",
    "metadata": {
     "hide-output": false
    },
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e000a447",
+   "id": "af2171b2",
    "metadata": {},
    "source": [
     "Wait, you say!\n",
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d490f547",
+   "id": "9db58140",
    "metadata": {},
    "source": [
     "### Coding the network\n",
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5428ba84",
+   "id": "6dc96df9",
    "metadata": {
     "hide-output": false
    },
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2b66b41",
+   "id": "97d46679",
    "metadata": {},
    "source": [
     "The function $ f $ is appropriately vectorized, so that we can pass in the entire\n",
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "851f1d0f",
+   "id": "b02ab1b0",
    "metadata": {
     "hide-output": false
    },
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "922c0026",
+   "id": "cff7fe30",
    "metadata": {},
    "source": [
     "We’ll use its gradient to do stochastic gradient descent.\n",
@@ -585,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3203b37d",
+   "id": "135576fe",
    "metadata": {
     "hide-output": false
    },
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9162927",
+   "id": "7c8b8698",
    "metadata": {},
    "source": [
     "The gradient of `loss_fn` is with respect to the first argument `θ`.\n",
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86d9b968",
+   "id": "76aab30c",
    "metadata": {},
    "source": [
     "### Gradient descent\n",
@@ -632,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f5751ae",
+   "id": "9530edb3",
    "metadata": {
     "hide-output": false
    },
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff76ea17",
+   "id": "795e321e",
    "metadata": {},
    "source": [
     "Here `jax.tree.map` understands `θ` and `gradient` as pytrees of the\n",
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad531959",
+   "id": "6a6d6345",
    "metadata": {
     "hide-output": false
    },
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5adfb21",
+   "id": "2643f0c3",
    "metadata": {},
    "source": [
     "### Execution\n",
@@ -729,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee094a9e",
+   "id": "aa2a636b",
    "metadata": {
     "hide-output": false
    },
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5496d5c",
+   "id": "ef3fac65",
    "metadata": {
     "hide-output": false
    },
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36480490",
+   "id": "0d26aab9",
    "metadata": {},
    "source": [
     "This figure shows MSE across iterations:"
@@ -777,7 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1982265c",
+   "id": "9b0aa46f",
    "metadata": {
     "hide-output": false
    },
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26f7f0f9",
+   "id": "82efe68e",
    "metadata": {},
    "source": [
     "Let’s check the final MSE on the validation data, at the estimated parameters."
@@ -800,7 +800,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0221fd6e",
+   "id": "ba1d8a34",
    "metadata": {
     "hide-output": false
    },
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2507e0cb",
+   "id": "ebd4fa1d",
    "metadata": {},
    "source": [
     "This MSE is not as low as we got for Keras, but we did quite well given how\n",
@@ -826,7 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71908343",
+   "id": "a43a6396",
    "metadata": {
     "hide-output": false
    },
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd2beced",
+   "id": "5f311688",
    "metadata": {},
    "source": [
     "## JAX plus Optax\n",
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf4b19ae",
+   "id": "84e4a36c",
    "metadata": {},
    "source": [
     "### Optax with SGD\n",
@@ -867,7 +867,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b261cb03",
+   "id": "6c9d164f",
    "metadata": {
     "hide-output": false
    },
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ed708cd",
+   "id": "3e160f82",
    "metadata": {},
    "source": [
     "Let’s try running it."
@@ -909,7 +909,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e851ab42",
+   "id": "e2f006ec",
    "metadata": {
     "hide-output": false
    },
@@ -936,7 +936,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a52ded3f",
+   "id": "8366d233",
    "metadata": {
     "hide-output": false
    },
@@ -953,7 +953,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19b6b10d",
+   "id": "c08af5c9",
    "metadata": {},
    "source": [
     "### Optax with ADAM\n",
@@ -968,7 +968,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "402fa87c",
+   "id": "8c5c9fe4",
    "metadata": {
     "hide-output": false
    },
@@ -1002,7 +1002,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d588fd8",
+   "id": "bcecb834",
    "metadata": {
     "hide-output": false
    },
@@ -1028,7 +1028,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da5576a3",
+   "id": "3cc0442e",
    "metadata": {},
    "source": [
     "Here’s a visualization of the result."
@@ -1037,7 +1037,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4bc73bc",
+   "id": "8a1c5a84",
    "metadata": {
     "hide-output": false
    },
@@ -1054,7 +1054,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9841ab93",
+   "id": "6dccd953",
    "metadata": {},
    "source": [
     "## Summary\n",
@@ -1065,7 +1065,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a049c24",
+   "id": "3af83dc1",
    "metadata": {
     "hide-output": false
    },
@@ -1101,7 +1101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a34f7c5a",
+   "id": "a5b94e05",
    "metadata": {},
    "source": [
     "All methods achieve similar validation MSE values (around 0.043-0.045).\n",
@@ -1121,7 +1121,7 @@
   }
  ],
  "metadata": {
-  "date": 1764310727.3738341,
+  "date": 1764311391.007839,
   "filename": "jax_nn.md",
   "kernelspec": {
    "display_name": "Python",
