--- a/markov_asset.ipynb
+++ b/markov_asset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e5156666",
+   "id": "73cfaa62",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec022be5",
+   "id": "017eb221",
    "metadata": {},
    "source": [
     "# An Asset Pricing Problem"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d7aa8dc",
+   "id": "1cfd9127",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ebfb625",
+   "id": "a6e15044",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7dea44f3",
+   "id": "14840c24",
    "metadata": {
     "hide-output": false
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d5e0c63",
+   "id": "5635acc6",
    "metadata": {},
    "source": [
     "In addition to JAX and Anaconda, this lecture will need the following libraries:"
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eedfcd4b",
+   "id": "f4ebe706",
    "metadata": {
     "hide-output": false
    },
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54cfc26b",
+   "id": "fb226214",
    "metadata": {},
    "source": [
     "Below we use the following imports"
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0954b72b",
+   "id": "e671bf99",
    "metadata": {
     "hide-output": false
    },
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6036e66",
+   "id": "c31b8cc9",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase precision."
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc9dc610",
+   "id": "2bebc2e7",
    "metadata": {
     "hide-output": false
    },
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "811c7109",
+   "id": "1257fcc7",
    "metadata": {},
    "source": [
     "## Pricing a single payoff\n",
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef0bc3e5",
+   "id": "4081587c",
    "metadata": {},
    "source": [
     "## Pricing a cash flow\n",
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a89a9c51",
+   "id": "baed78df",
    "metadata": {},
    "source": [
     "## Choosing the stochastic discount factor\n",
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77d46681",
+   "id": "6ac7969c",
    "metadata": {},
    "source": [
     "## Solving for the price-dividend ratio\n",
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e195ffc6",
+   "id": "3c58fede",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -474,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6577f9d6",
+   "id": "57942030",
    "metadata": {
     "hide-output": false
    },
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7ab743f",
+   "id": "07675b95",
    "metadata": {},
    "source": [
     "The next function verifies that the spectral radius of a given matrix is $ < 1 $."
@@ -517,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f9863c8",
+   "id": "eab976d9",
    "metadata": {
     "hide-output": false
    },
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccc39dd6",
+   "id": "cbd72e1b",
    "metadata": {},
    "source": [
     "In what follows we assume that $ \\{X_t\\} $, the state process, is a discretization of the AR(1) process\n",
@@ -552,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0f49b0e",
+   "id": "66039008",
    "metadata": {
     "hide-output": false
    },
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69805116",
+   "id": "c57611bd",
    "metadata": {},
    "source": [
     "Our first step is to construct the matrix $ K $ defined in [(9.15)](#equation-eq-ntecxdk).\n",
@@ -593,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a9857e7",
+   "id": "adcde101",
    "metadata": {
     "hide-output": false
    },
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2078d100",
+   "id": "aa405d59",
    "metadata": {},
    "source": [
     "To exploit the parallelization capabilities of JAX, let’s also write a vectorized (i.e., loop-free) implementation."
@@ -623,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61d2e334",
+   "id": "030dcbcd",
    "metadata": {
     "hide-output": false
    },
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adc8bd6d",
+   "id": "59f176fa",
    "metadata": {},
    "source": [
     "These two functions produce the same output:"
@@ -652,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d4f7d5e",
+   "id": "ac640977",
    "metadata": {
     "hide-output": false
    },
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8ace8f2",
+   "id": "8827e2f3",
    "metadata": {},
    "source": [
     "Now we can compute the price-dividend ratio:"
@@ -675,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e6bdc31",
+   "id": "62a2703f",
    "metadata": {
     "hide-output": false
    },
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9d681f5",
+   "id": "6146dc86",
    "metadata": {},
    "source": [
     "Here’s a plot of $ v $ as a function of the state for several values of $ \\gamma $."
@@ -721,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83f165b8",
+   "id": "7cdecfd6",
    "metadata": {
     "hide-output": false
    },
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe9356c6",
+   "id": "3e2b4038",
    "metadata": {},
    "source": [
     "Notice that $ v $ is decreasing in each case.\n",
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8582a568",
+   "id": "e5f646cc",
    "metadata": {},
    "source": [
     "## An Extended Example\n",
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "283b0061",
+   "id": "dbe92e0f",
    "metadata": {},
    "source": [
     "## Numpy Version\n",
@@ -926,7 +926,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a48ad35",
+   "id": "f482fd23",
    "metadata": {
     "hide-output": false
    },
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f39dc5a0",
+   "id": "4f3da522",
    "metadata": {},
    "source": [
     "Now we provide a function to compute the matrix $ A $."
@@ -980,7 +980,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13dde11c",
+   "id": "10a65af8",
    "metadata": {
     "hide-output": false
    },
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d9511fc",
+   "id": "eee43f8a",
    "metadata": {},
    "source": [
     "Here’s our function to compute the price-dividend ratio for the stochastic volatility model."
@@ -1018,7 +1018,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c17a5a5b",
+   "id": "21ccfe50",
    "metadata": {
     "hide-output": false
    },
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ed86184",
+   "id": "bd048137",
    "metadata": {},
    "source": [
     "Let’s create an instance of the model and solve it."
@@ -1070,7 +1070,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1405ea5a",
+   "id": "70fdbe24",
    "metadata": {
     "hide-output": false
    },
@@ -1082,7 +1082,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c99ac51d",
+   "id": "702b2915",
    "metadata": {},
    "source": [
     "Let’s run it to compile."
@@ -1091,7 +1091,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6278d0f4",
+   "id": "cc337c00",
    "metadata": {
     "hide-output": false
    },
@@ -1105,7 +1105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83b9c9bc",
+   "id": "97d96366",
    "metadata": {},
    "source": [
     "Let’s run it again to remove the compile."
@@ -1114,7 +1114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c164c2e",
+   "id": "194f1ebe",
    "metadata": {
     "hide-output": false
    },
@@ -1128,7 +1128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a9440ac",
+   "id": "7497aa4d",
    "metadata": {},
    "source": [
     "Here are some plots of the solution $ v $ along the three dimensions."
@@ -1137,7 +1137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dad05e48",
+   "id": "4ad5f2b8",
    "metadata": {
     "hide-output": false
    },
@@ -1154,7 +1154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d33ce97",
+   "id": "cb93544d",
    "metadata": {
     "hide-output": false
    },
@@ -1171,7 +1171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "497b269d",
+   "id": "373d8915",
    "metadata": {
     "hide-output": false
    },
@@ -1187,7 +1187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4db51b0",
+   "id": "34711a7a",
    "metadata": {},
    "source": [
     "## JAX Version\n",
@@ -1200,7 +1200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1d44e4a",
+   "id": "99803720",
    "metadata": {
     "hide-output": false
    },
@@ -1224,7 +1224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac026a6d",
+   "id": "11570b3a",
    "metadata": {},
    "source": [
     "Here’s a function to compute $ A $.\n",
@@ -1237,7 +1237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a964b3c2",
+   "id": "c8c5ada4",
    "metadata": {
     "hide-output": false
    },
@@ -1266,7 +1266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be9a3c56",
+   "id": "ae904aa5",
    "metadata": {},
    "source": [
     "Here’s the function that computes the solution."
@@ -1275,7 +1275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84ff5e22",
+   "id": "c7fa6196",
    "metadata": {
     "hide-output": false
    },
@@ -1314,7 +1314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ecbf9d6",
+   "id": "2ebce7ce",
    "metadata": {},
    "source": [
     "Now let’s target these functions for JIT-compilation, while using `static_argnums` to indicate that the function will need to be recompiled when `shapes` changes."
@@ -1323,7 +1323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bd28468",
+   "id": "c7651164",
    "metadata": {
     "hide-output": false
    },
@@ -1336,7 +1336,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73421d52",
+   "id": "a9d3793a",
    "metadata": {
     "hide-output": false
    },
@@ -1350,7 +1350,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8d9f46a",
+   "id": "6efe0270",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to run with compile time included."
@@ -1359,7 +1359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbd89921",
+   "id": "1ef1eda5",
    "metadata": {
     "hide-output": false
    },
@@ -1373,7 +1373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6daf0e58",
+   "id": "6633e681",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1382,7 +1382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b994d7e",
+   "id": "0587f349",
    "metadata": {
     "hide-output": false
    },
@@ -1396,7 +1396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff190973",
+   "id": "38445e56",
    "metadata": {},
    "source": [
     "Here’s the ratio of times:"
@@ -1405,7 +1405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8319ced4",
+   "id": "802abafd",
    "metadata": {
     "hide-output": false
    },
@@ -1416,7 +1416,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86d65dfb",
+   "id": "d009fa54",
    "metadata": {},
    "source": [
     "Let’s check that the NumPy and JAX versions realize the same solution."
@@ -1425,7 +1425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23dd810b",
+   "id": "a92bdb60",
    "metadata": {
     "hide-output": false
    },
@@ -1438,7 +1438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14682f52",
+   "id": "b4c996a5",
    "metadata": {},
    "source": [
     "## A memory-efficient JAX version\n",
@@ -1455,7 +1455,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc57602b",
+   "id": "f1d843aa",
    "metadata": {
     "hide-output": false
    },
@@ -1483,7 +1483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90eb9342",
+   "id": "067bfce3",
    "metadata": {},
    "source": [
     "Now we write a version of the solution function for the price-dividend ratio\n",
@@ -1493,7 +1493,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ee64ed8",
+   "id": "7798705d",
    "metadata": {
     "hide-output": false
    },
@@ -1515,7 +1515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c58b660",
+   "id": "541a18a7",
    "metadata": {},
    "source": [
     "Let’s target these functions for JIT compilation."
@@ -1524,7 +1524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b05a53d3",
+   "id": "4706e363",
    "metadata": {
     "hide-output": false
    },
@@ -1536,7 +1536,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce46b239",
+   "id": "e0ba70ed",
    "metadata": {},
    "source": [
     "Let’s time the solution with compile time included."
@@ -1545,7 +1545,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d55c9e6",
+   "id": "4b041cb0",
    "metadata": {
     "hide-output": false
    },
@@ -1559,7 +1559,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58c49d72",
+   "id": "d61ed194",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1568,7 +1568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d5968d8",
+   "id": "ba6e9483",
    "metadata": {
     "hide-output": false
    },
@@ -1582,7 +1582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f01ec985",
+   "id": "46d91401",
    "metadata": {},
    "source": [
     "Let’s verify the solution again:"
@@ -1591,7 +1591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "822863a5",
+   "id": "047621d0",
    "metadata": {
     "hide-output": false
    },
@@ -1602,7 +1602,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25f40213",
+   "id": "41631788",
    "metadata": {},
    "source": [
     "Here’s the ratio of times between memory-efficient and direct version:"
@@ -1611,7 +1611,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0e841ad",
+   "id": "290d62d0",
    "metadata": {
     "hide-output": false
    },
@@ -1622,7 +1622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83f933b0",
+   "id": "6a19fd6f",
    "metadata": {},
    "source": [
     "The speed is somewhat faster and, moreover, we can now work with much larger grids.\n",
@@ -1633,7 +1633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9209f8e9",
+   "id": "bd8d172f",
    "metadata": {
     "hide-output": false
    },
@@ -1650,7 +1650,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19f6567d",
+   "id": "83a2e295",
    "metadata": {},
    "source": [
     "The solution is computed relatively quickly and without memory issues.\n",
@@ -1661,7 +1661,7 @@
   }
  ],
  "metadata": {
-  "date": 1764310727.549249,
+  "date": 1764311391.1713364,
   "filename": "markov_asset.md",
   "kernelspec": {
    "display_name": "Python",
