--- a/mle.ipynb
+++ b/mle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4c953c3d",
+   "id": "35c2ab66",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9cea62d",
+   "id": "d320bf5d",
    "metadata": {},
    "source": [
     "# Maximum Likelihood Estimation"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3efac0c",
+   "id": "fcd9646b",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0172fec",
+   "id": "679d2fc2",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08ad64a7",
+   "id": "92e09744",
    "metadata": {
     "hide-output": false
    },
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2376f293",
+   "id": "69f1a0c8",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19608ac3",
+   "id": "9f163642",
    "metadata": {
     "hide-output": false
    },
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0092442",
+   "id": "d427f168",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9086ea60",
+   "id": "255c4e90",
    "metadata": {
     "hide-output": false
    },
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83443303",
+   "id": "7ddbd509",
    "metadata": {},
    "source": [
     "## MLE with numerical methods (JAX)\n",
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39a91012",
+   "id": "6ea14227",
    "metadata": {},
    "source": [
     "### A toy model\n",
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3070aee",
+   "id": "5b3463fc",
    "metadata": {
     "hide-output": false
    },
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8e8a3d7",
+   "id": "42b063e2",
    "metadata": {},
    "source": [
     "To find the value of $ \\frac{d \\log \\mathcal{L(\\boldsymbol{\\beta})}}{d \\boldsymbol{\\beta}} $, we can use [jax.grad](https://jax.readthedocs.io/en/latest/_autosummary/jax.grad.html) which auto-differentiates the given function.\n",
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fa537b5",
+   "id": "ea8f533a",
    "metadata": {
     "hide-output": false
    },
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b6ca21e",
+   "id": "32d07546",
    "metadata": {
     "hide-output": false
    },
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3477ff74",
+   "id": "021dd4a0",
    "metadata": {},
    "source": [
     "The plot shows that the maximum likelihood value (the top plot) occurs\n",
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f236dc4f",
+   "id": "59dec893",
    "metadata": {},
    "source": [
     "### A Poisson model\n",
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed794b17",
+   "id": "4bb8648c",
    "metadata": {
     "hide-output": false
    },
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cec11a7a",
+   "id": "55d1c594",
    "metadata": {},
    "source": [
     "The log likelihood function of the Poisson regression is\n",
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d13148f",
+   "id": "a5a0ae77",
    "metadata": {
     "hide-output": false
    },
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70797cf7",
+   "id": "65f1e9f3",
    "metadata": {},
    "source": [
     "Now we can define the log likelihood function in Python"
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32587343",
+   "id": "fff96c2c",
    "metadata": {
     "hide-output": false
    },
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83293ab0",
+   "id": "aba45406",
    "metadata": {},
    "source": [
     "To find the gradient of the `poisson_logL`, we again use [jax.grad](https://jax.readthedocs.io/en/latest/_autosummary/jax.grad.html).\n",
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6bdb9be",
+   "id": "7349cd54",
    "metadata": {
     "hide-output": false
    },
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f63ffe2e",
+   "id": "b7f7cb66",
    "metadata": {},
    "source": [
     "Our function `newton_raphson` will take a `RegressionModel` object\n",
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10b160e6",
+   "id": "20c6d58f",
    "metadata": {
     "hide-output": false
    },
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33b9a17a",
+   "id": "5fc3a1ca",
    "metadata": {},
    "source": [
     "Let’s try out our algorithm with a small dataset of 5 observations and 3\n",
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39d2bfb3",
+   "id": "81516612",
    "metadata": {
     "hide-output": false
    },
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0f973ad",
+   "id": "ffc745df",
    "metadata": {},
    "source": [
     "As this was a simple model with few observations, the algorithm achieved\n",
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb657009",
+   "id": "b1b5a5f5",
    "metadata": {
     "hide-output": false
    },
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab95fd9a",
+   "id": "e2596b89",
    "metadata": {},
    "source": [
     "## MLE with `statsmodels`\n",
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cd750ad",
+   "id": "1e1d00fd",
    "metadata": {
     "hide-output": false
    },
@@ -527,7 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee989a24",
+   "id": "6848e65a",
    "metadata": {
     "hide-output": false
    },
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "960a7c92",
+   "id": "9c616c6c",
    "metadata": {},
    "source": [
     "The benefit of writing our own procedure, relative to statsmodels is that\n",
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b5d3910",
+   "id": "e3a7763f",
    "metadata": {},
    "source": [
     "## Exercise 21.1\n",
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "110597f1",
+   "id": "bdc0b8dc",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 21.1](https://jax.quantecon.org/#newton_mle1)\n",
@@ -606,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "109ee172",
+   "id": "7525e810",
    "metadata": {
     "hide-output": false
    },
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41b36b72",
+   "id": "cb853c91",
    "metadata": {},
    "source": [
     "To simulate the model, we sample 500,000 values of $ x_t $ from the standard normal distribution."
@@ -628,7 +628,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae56ef51",
+   "id": "12cd77f7",
    "metadata": {
     "hide-output": false
    },
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31744daf",
+   "id": "0595b051",
    "metadata": {},
    "source": [
     "We compute $ \\lambda $ using [(21.1)](#equation-lambda-mle)"
@@ -651,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ad473d0",
+   "id": "fb901473",
    "metadata": {
     "hide-output": false
    },
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bacad5dc",
+   "id": "0d1371d0",
    "metadata": {},
    "source": [
     "Let’s define $ y_t $ by sampling from a Poisson distribution with mean as $ \\lambda_t $."
@@ -671,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4689c662",
+   "id": "bbb7b6fd",
    "metadata": {
     "hide-output": false
    },
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea62334c",
+   "id": "62c19b0b",
    "metadata": {},
    "source": [
     "Now let’s try to recover the true parameter values using the Newton-Raphson\n",
@@ -692,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed0e9fb9",
+   "id": "4085bfc3",
    "metadata": {
     "hide-output": false
    },
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c793871",
+   "id": "45542fcb",
    "metadata": {},
    "source": [
     "The maximum likelihood estimates are similar to the true parameter values."
@@ -720,7 +720,7 @@
   }
  ],
  "metadata": {
-  "date": 1764310727.5754316,
+  "date": 1764311391.195743,
   "filename": "mle.md",
   "kernelspec": {
    "display_name": "Python",
