--- a/autodiff.ipynb
+++ b/autodiff.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7e010404",
+   "id": "db8a9987",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a39f656",
+   "id": "7df5380e",
    "metadata": {},
    "source": [
     "# Adventures with Autodiff"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85090b61",
+   "id": "e7f5f868",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "899055b3",
+   "id": "65f72e52",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02d2a99c",
+   "id": "cafd35d1",
    "metadata": {
     "hide-output": false
    },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80429f6d",
+   "id": "d83faebc",
    "metadata": {},
    "source": [
     "Checking for a GPU:"
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a393977d",
+   "id": "55eba221",
    "metadata": {
     "hide-output": false
    },
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a8b23ea",
+   "id": "12ac99c8",
    "metadata": {},
    "source": [
     "## What is automatic differentiation?\n",
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5011809b",
+   "id": "11371452",
    "metadata": {},
    "source": [
     "### Autodiff is not finite differences\n",
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ec9d477",
+   "id": "dcdca875",
    "metadata": {
     "hide-output": false
    },
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "411e3d39",
+   "id": "c6896463",
    "metadata": {},
    "source": [
     "This kind of numerical derivative is often inaccurate and unstable.\n",
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1103ed8",
+   "id": "c03d496b",
    "metadata": {},
    "source": [
     "### Autodiff is not symbolic calculus\n",
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0db40813",
+   "id": "93eecdf8",
    "metadata": {
     "hide-output": false
    },
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e5913c0",
+   "id": "0b0e81ac",
    "metadata": {},
    "source": [
     "Symbolic calculus is not well suited to high performance\n",
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2766a0d9",
+   "id": "0d6718f8",
    "metadata": {},
    "source": [
     "### Autodiff\n",
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c41ea8f",
+   "id": "2f9585e5",
    "metadata": {},
    "source": [
     "## Some experiments\n",
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ae6ed4e",
+   "id": "1de67878",
    "metadata": {},
    "source": [
     "### A differentiable function\n",
@@ -267,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87858264",
+   "id": "6b8f7196",
    "metadata": {
     "hide-output": false
    },
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d12cb2e",
+   "id": "aa465603",
    "metadata": {},
    "source": [
     "We use `grad` to compute the gradient of a real-valued function:"
@@ -288,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d22b0b74",
+   "id": "5c874af9",
    "metadata": {
     "hide-output": false
    },
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "056bd159",
+   "id": "73875124",
    "metadata": {},
    "source": [
     "Let’s plot the result:"
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72ec1157",
+   "id": "8f8f9bf5",
    "metadata": {
     "hide-output": false
    },
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba3abdf3",
+   "id": "fa4b375e",
    "metadata": {
     "hide-output": false
    },
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ee898c2",
+   "id": "8222bb16",
    "metadata": {},
    "source": [
     "### Absolute value function\n",
@@ -346,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4ce236f",
+   "id": "53eb0089",
    "metadata": {
     "hide-output": false
    },
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "781fac07",
+   "id": "4c3019cd",
    "metadata": {
     "hide-output": false
    },
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e56d4fa9",
+   "id": "43ae8c1a",
    "metadata": {
     "hide-output": false
    },
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a64b33e9",
+   "id": "7b2e9f1e",
    "metadata": {},
    "source": [
     "At the nondifferentiable point $ 0 $, `jax.grad` returns the right derivative:"
@@ -395,7 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d4c7f1f",
+   "id": "b8ac45e9",
    "metadata": {
     "hide-output": false
    },
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84ebca13",
+   "id": "5b7eb649",
    "metadata": {},
    "source": [
     "### Differentiating through control flow\n",
@@ -417,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad6752a9",
+   "id": "17e7ae4d",
    "metadata": {
     "hide-output": false
    },
@@ -438,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d2596b3",
+   "id": "5f0ac932",
    "metadata": {
     "hide-output": false
    },
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9269fc6b",
+   "id": "99bb48d1",
    "metadata": {
     "hide-output": false
    },
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7153ba29",
+   "id": "4a1f3ed3",
    "metadata": {
     "hide-output": false
    },
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c2a19bf",
+   "id": "95598cd8",
    "metadata": {},
    "source": [
     "### Differentiating through a linear interpolation\n",
@@ -488,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "138dccb9",
+   "id": "6e7311be",
    "metadata": {
     "hide-output": false
    },
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1b832d8",
+   "id": "4b8f04c6",
    "metadata": {
     "hide-output": false
    },
@@ -518,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8966801e",
+   "id": "4106effd",
    "metadata": {
     "hide-output": false
    },
@@ -530,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e9c3eee",
+   "id": "3669df14",
    "metadata": {
     "hide-output": false
    },
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "388cd711",
+   "id": "34301476",
    "metadata": {},
    "source": [
     "## Gradient Descent\n",
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2636e2cd",
+   "id": "311e9d06",
    "metadata": {},
    "source": [
     "### A function for gradient descent\n",
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56209c40",
+   "id": "6f0d9b91",
    "metadata": {
     "hide-output": false
    },
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bb77597",
+   "id": "2a90b0b8",
    "metadata": {},
    "source": [
     "### Simulated data\n",
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f14d38ce",
+   "id": "e19ecc4f",
    "metadata": {
     "hide-output": false
    },
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2f117e6",
+   "id": "4f27ff0c",
    "metadata": {
     "hide-output": false
    },
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af9cbb08",
+   "id": "df25b7d7",
    "metadata": {},
    "source": [
     "Let’s start by calculating the estimated slope and intercept using closed form solutions."
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9235a600",
+   "id": "ffa73cfb",
    "metadata": {
     "hide-output": false
    },
@@ -675,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb4fcad5",
+   "id": "55164950",
    "metadata": {
     "hide-output": false
    },
@@ -687,7 +687,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00f551bb",
+   "id": "91ba7254",
    "metadata": {
     "hide-output": false
    },
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cf20cb4",
+   "id": "2745511e",
    "metadata": {},
    "source": [
     "### Minimizing squared loss by gradient descent\n",
@@ -716,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d28267b2",
+   "id": "c317260f",
    "metadata": {
     "hide-output": false
    },
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfbddb39",
+   "id": "269c4522",
    "metadata": {},
    "source": [
     "Now we minimize it:"
@@ -740,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9233a47",
+   "id": "1bf4db83",
    "metadata": {
     "hide-output": false
    },
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8057e1cd",
+   "id": "4c8c66fd",
    "metadata": {},
    "source": [
     "Let’s plot the results."
@@ -762,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d26e21e0",
+   "id": "890fc85c",
    "metadata": {
     "hide-output": false
    },
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6678669",
+   "id": "3abad945",
    "metadata": {},
    "source": [
     "Notice that we get the same estimates as we did from the closed form solutions."
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6542c162",
+   "id": "da2629e3",
    "metadata": {},
    "source": [
     "### Adding a squared term\n",
@@ -800,7 +800,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed56cb36",
+   "id": "2a9e95e5",
    "metadata": {
     "hide-output": false
    },
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51273af4",
+   "id": "711c47f9",
    "metadata": {},
    "source": [
     "Now we’re minimizing in three dimensions.\n",
@@ -826,7 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ad7b459",
+   "id": "6043d368",
    "metadata": {
     "hide-output": false
    },
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c27cfa2",
+   "id": "76e04e50",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27a06eef",
+   "id": "fba15b94",
    "metadata": {},
    "source": [
     "## Exercise 3.1\n",
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f700bb7",
+   "id": "c292de19",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 3.1](https://jax.quantecon.org/#auto_ex1)\n",
@@ -894,7 +894,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43f66f6d",
+   "id": "caf43ba9",
    "metadata": {
     "hide-output": false
    },
@@ -908,7 +908,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7f4c748",
+   "id": "8f7aa1c3",
    "metadata": {
     "hide-output": false
    },
@@ -929,7 +929,7 @@
   }
  ],
  "metadata": {
-  "date": 1764310727.1412373,
+  "date": 1764311390.791485,
   "filename": "autodiff.md",
   "kernelspec": {
    "display_name": "Python",
