--- a/wealth_dynamics.ipynb
+++ b/wealth_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8cfc6b21",
+   "id": "e945057c",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ae81da4",
+   "id": "9231abb9",
    "metadata": {},
    "source": [
     "# Wealth Distribution Dynamics"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0127858",
+   "id": "679ebb9e",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fd4555a",
+   "id": "6987c489",
    "metadata": {
     "hide-output": false
    },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb8fe588",
+   "id": "d6a10996",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6109887",
+   "id": "0e5a6177",
    "metadata": {
     "hide-output": false
    },
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b3ec668",
+   "id": "771b1af8",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5746ae40",
+   "id": "eed04cf5",
    "metadata": {
     "hide-output": false
    },
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23b98f4e",
+   "id": "ff9a38af",
    "metadata": {},
    "source": [
     "## Wealth dynamics\n",
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97bc5c5f",
+   "id": "0b5fc288",
    "metadata": {},
    "source": [
     "## Implementation"
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c7bc4cb",
+   "id": "26224ce1",
    "metadata": {},
    "source": [
     "### Numba implementation\n",
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ba8556f",
+   "id": "f3dd89aa",
    "metadata": {
     "hide-output": false
    },
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ac0d1f1",
+   "id": "1a290933",
    "metadata": {},
    "source": [
     "Here’s a function that generates the aggregate state process"
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cebaa36c",
+   "id": "22380336",
    "metadata": {
     "hide-output": false
    },
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3d19f90",
+   "id": "19314eb2",
    "metadata": {},
    "source": [
     "Here’s a function that updates household wealth by one period, taking the\n",
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82d25d91",
+   "id": "cfa61ca7",
    "metadata": {
     "hide-output": false
    },
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bf059ca",
+   "id": "f9f2d156",
    "metadata": {},
    "source": [
     "Here’s a function to simulate the time series of wealth for an individual household"
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04b34fba",
+   "id": "83f322cd",
    "metadata": {
     "hide-output": false
    },
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60ca0cf6",
+   "id": "9e16a223",
    "metadata": {},
    "source": [
     "Let’s look at the wealth dynamics of an individual household"
@@ -346,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b77cb3c9",
+   "id": "4c3e10ca",
    "metadata": {
     "hide-output": false
    },
@@ -363,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f804a7f",
+   "id": "3a8df18c",
    "metadata": {
     "hide-output": false
    },
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "195f7af0",
+   "id": "94a122ff",
    "metadata": {},
    "source": [
     "Notice the large spikes in wealth over time.\n",
@@ -392,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3984a4d9",
+   "id": "6e064286",
    "metadata": {
     "hide-output": false
    },
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c17e007",
+   "id": "ad780512",
    "metadata": {},
    "source": [
     "Parallelization works in the function above because the time path of each\n",
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f848de8",
+   "id": "147be80c",
    "metadata": {
     "hide-output": false
    },
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f52fdccb",
+   "id": "443b0925",
    "metadata": {},
    "source": [
     "We run it again to eliminate compile time."
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e8cdaab",
+   "id": "c6808c30",
    "metadata": {
     "hide-output": false
    },
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e18f4dcb",
+   "id": "5d5b8f42",
    "metadata": {},
    "source": [
     "### JAX implementation\n",
@@ -501,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd6bb3d3",
+   "id": "2475b95f",
    "metadata": {
     "hide-output": false
    },
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "654d0a4a",
+   "id": "750515c6",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to shift the cross-section of households forward\n",
@@ -551,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35847b24",
+   "id": "8e87e510",
    "metadata": {
     "hide-output": false
    },
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18510856",
+   "id": "b8c29488",
    "metadata": {
     "hide-output": false
    },
@@ -585,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a5f5a69",
+   "id": "1cf53b32",
    "metadata": {
     "hide-output": false
    },
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d225509d",
+   "id": "92b30f26",
    "metadata": {},
    "source": [
     "And let’s see how long it takes if we compile the loop."
@@ -610,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2b7cae9",
+   "id": "c6a213ff",
    "metadata": {
     "hide-output": false
    },
@@ -659,7 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea61526e",
+   "id": "d4066245",
    "metadata": {
     "hide-output": false
    },
@@ -673,7 +673,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59ed5c86",
+   "id": "57e76bbc",
    "metadata": {
     "hide-output": false
    },
@@ -692,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64e50ce0",
+   "id": "95bc038d",
    "metadata": {
     "hide-output": false
    },
@@ -711,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a0b7d9c",
+   "id": "22a67bdb",
    "metadata": {
     "hide-output": false
    },
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51d87b7c",
+   "id": "6c3aae0d",
    "metadata": {},
    "source": [
     "### Pareto tails\n",
@@ -741,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4dcfa95",
+   "id": "9d90bc19",
    "metadata": {
     "hide-output": false
    },
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf3ab2c5",
+   "id": "36837bd4",
    "metadata": {},
    "source": [
     "### Lorenz curves and Gini coefficients\n",
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "543b2d86",
+   "id": "3ecdba0e",
    "metadata": {},
    "source": [
     "#### Lorenz curve\n",
@@ -800,7 +800,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49a21a38",
+   "id": "8ef29386",
    "metadata": {
     "hide-output": false
    },
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "783a96e9",
+   "id": "4d578976",
    "metadata": {},
    "source": [
     "Let’s test"
@@ -828,7 +828,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32c93899",
+   "id": "58fe5391",
    "metadata": {
     "hide-output": false
    },
@@ -845,7 +845,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ad3bcfc",
+   "id": "221925ad",
    "metadata": {
     "hide-output": false
    },
@@ -860,7 +860,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5080be5",
+   "id": "53cd058d",
    "metadata": {
     "hide-output": false
    },
@@ -872,7 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "462dd009",
+   "id": "3907ec4b",
    "metadata": {
     "hide-output": false
    },
@@ -885,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4be76304",
+   "id": "0a7be0f2",
    "metadata": {
     "hide-output": false
    },
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38a4d553",
+   "id": "af4d5c28",
    "metadata": {},
    "source": [
     "#### Gini Coefficient\n",
@@ -922,7 +922,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b6fe61a",
+   "id": "051e4516",
    "metadata": {
     "hide-output": false
    },
@@ -940,7 +940,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f99edf0",
+   "id": "83a75089",
    "metadata": {
     "hide-output": false
    },
@@ -952,7 +952,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbba3dd8",
+   "id": "48b518de",
    "metadata": {
     "hide-output": false
    },
@@ -965,7 +965,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "defddd4f",
+   "id": "17dfda2f",
    "metadata": {
     "hide-output": false
    },
@@ -976,7 +976,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cfa956c",
+   "id": "81379dd0",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25a22d0e",
+   "id": "a4135698",
    "metadata": {},
    "source": [
     "## Exercise 7.1\n",
@@ -996,7 +996,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55a80b0d",
+   "id": "90925d0f",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.1](https://jax.quantecon.org/#wd_ex1)\n",
@@ -1007,7 +1007,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "820b68c4",
+   "id": "a0ffa2e2",
    "metadata": {
     "hide-output": false
    },
@@ -1028,7 +1028,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d6ed42c",
+   "id": "3bc7afd4",
    "metadata": {
     "hide-output": false
    },
@@ -1040,7 +1040,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "125ec8b3",
+   "id": "3309c2de",
    "metadata": {
     "hide-output": false
    },
@@ -1053,7 +1053,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf1a55c8",
+   "id": "358690c3",
    "metadata": {
     "hide-output": false
    },
@@ -1064,7 +1064,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4322e85a",
+   "id": "0496c46e",
    "metadata": {},
    "source": [
     "## Exercise 7.2\n",
@@ -1091,7 +1091,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df7b7a77",
+   "id": "bb98c340",
    "metadata": {
     "hide-output": false
    },
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c4fd38d",
+   "id": "8a0f3a8b",
    "metadata": {},
    "source": [
     "Use the following as your initial cross-sectional distribution"
@@ -1111,7 +1111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "441ed520",
+   "id": "50005f41",
    "metadata": {
     "hide-output": false
    },
@@ -1123,7 +1123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cf4c1a0",
+   "id": "413452b3",
    "metadata": {},
    "source": [
     "Once you have done that, plot the Gini coefficients as well.\n",
@@ -1133,7 +1133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2ff0d3d",
+   "id": "ec7214eb",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.2](https://jax.quantecon.org/#wd_ex2)\n",
@@ -1144,7 +1144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f3b0059",
+   "id": "920aaf64",
    "metadata": {
     "hide-output": false
    },
@@ -1169,7 +1169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68f35bee",
+   "id": "b36fea1a",
    "metadata": {},
    "source": [
     "The Lorenz curve shifts downwards as returns on financial income rise, indicating a rise in inequality.\n",
@@ -1180,7 +1180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02a2eb73",
+   "id": "fb711b70",
    "metadata": {
     "hide-output": false
    },
@@ -1195,7 +1195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9c51a7a",
+   "id": "e7bf259d",
    "metadata": {},
    "source": [
     "As expected, inequality increases as returns on financial income rise."
@@ -1203,7 +1203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f0ffa9f",
+   "id": "1b58bf5b",
    "metadata": {},
    "source": [
     "## Exercise 7.3\n",
@@ -1216,7 +1216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b427af42",
+   "id": "4be1623a",
    "metadata": {
     "hide-output": false
    },
@@ -1227,7 +1227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0985fc56",
+   "id": "831f41be",
    "metadata": {},
    "source": [
     "To isolate the role of volatility, set $ \\mu_r = - \\sigma_r^2 / 2 $ at each $ \\sigma_r $.\n",
@@ -1237,7 +1237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22f63ab1",
+   "id": "58d59af6",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.3](https://jax.quantecon.org/#wd_ex3)\n",
@@ -1248,7 +1248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "665731b5",
+   "id": "20017226",
    "metadata": {
     "hide-output": false
    },
@@ -1275,7 +1275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c9145c6",
+   "id": "6528575b",
    "metadata": {
     "hide-output": false
    },
@@ -1290,7 +1290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "defef258",
+   "id": "eb39fc3e",
    "metadata": {},
    "source": [
     "## Exercise 7.4\n",
@@ -1312,7 +1312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80676441",
+   "id": "6b8aeded",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.4](https://jax.quantecon.org/#wd_ex4)\n",
@@ -1325,7 +1325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bfe1312",
+   "id": "46ef699e",
    "metadata": {
     "hide-output": false
    },
@@ -1364,7 +1364,7 @@
   }
  ],
  "metadata": {
-  "date": 1764310727.8339355,
+  "date": 1764311391.438484,
   "filename": "wealth_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
